# Syncora

./: .gitignore  AGENTS.md  DESIGN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: download-rclone.mjs
server/: package-lock.json  package.json  wrangler.toml
server/migrations/: 0001_initial.sql
server/src/: env.ts  index.ts
server/src/middleware/: auth.ts  cors.ts
server/src/routes/: auth.ts  conflicts.ts  folders.ts  logs.ts  sync.ts
server/src/utils/: id.ts  jwt.ts
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: android.json  default.json  desktop.json
src-tauri/src/: error.rs  foreground_service.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/auth/: client.rs  mod.rs  token_store.rs
src-tauri/src/commands/: auth.rs  conflicts.rs  folders.rs  logs.rs  mod.rs  settings.rs  sync_cmd.rs
src-tauri/src/db/: conflicts.rs  folders.rs  migrations.rs  mod.rs  settings.rs  sync_logs.rs  sync_state.rs
src-tauri/src/rclone/: bisync.rs  config.rs  mod.rs  parser.rs  types.rs
src-tauri/src/s3sync/: algorithm.rs  client.rs  localfs.rs  mod.rs  types.rs
src-tauri/src/sync/: mod.rs  release.rs  scheduler.rs
src/components/layout/: bottom-nav.tsx  sidebar.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx
src/lib/: tauri.ts  tokens.ts  utils.ts
src/pages/: conflicts.tsx  dashboard.tsx  folders.tsx  login.tsx  logs.tsx  settings.tsx
