[package]
name = "syncora"
version = "0.4.0"
description = "A cross-platform desktop file sync tool"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "syncora"

[lib]
name = "syncora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
env_logger = "0.11"
# S3 sync engine: lightweight SigV4 signing + async HTTP for R2 access
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
percent-encoding = "2"

# Desktop-only dependencies (rclone subprocess, file watcher, tray, autostart)
[target.'cfg(not(target_os = "android"))'.dependencies]
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
dirs = "6.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
